feat: price component created.

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,3 +1,8 @@
 <a href="" class="card__container">
 	<img class="card__img" src="assets/spider-man2.png" alt="" srcset="" />
+	<app-card-label gameLabel="Exclusive"></app-card-label>
+	<app-card-pricing
+		gameType="Digital PS4"
+		gamePrice="R$ 199,99"
+	></app-card-pricing>
 </a>
