feat: finished the project.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,38 @@
 <div class="home__container">
-	<app-card></app-card>
+	<app-card
+		gameCover="assets/spider-man2.png"
+		gameLabel="DIGITAL"
+		gameType="DISC - PS4"
+		gamePrice="R$ 249,90"
+	></app-card>
+	<app-card
+		gameCover="assets/fc24.png"
+		gameLabel="EXCLUSIVE"
+		gameType="DISC - PS5"
+		gamePrice="R$ 299,90"
+	></app-card>
+	<app-card
+		gameCover="assets/diablo-IV.png"
+		gameLabel="DIGITAL"
+		gameType="DIGITAL - PS5"
+		gamePrice="R$ 289,90"
+	></app-card>
+	<app-card
+		gameCover="assets/call.png"
+		gameLabel="DIGITAL"
+		gameType="DIGITAL - PS4"
+		gamePrice="R$ 180,95"
+	></app-card>
+	<app-card
+		gameCover="assets/gran.png"
+		gameLabel="EXCLUSIVE"
+		gameType="DISC - PS5"
+		gamePrice="R$ 349,90"
+	></app-card>
+	<app-card
+		gameCover="assets/avatar.png"
+		gameLabel="EXCLUSIVE"
+		gameType="DISC - PS5"
+		gamePrice="R$ 329,90"
+	></app-card>
 </div>
