--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,8 @@
 <a href="" class="card__container">
-	<img class="card__img" src="assets/spider-man2.png" alt="" srcset="" />
-	<app-card-label gameLabel="Exclusive"></app-card-label>
+	<img class="card__img" [src]="[gameCover]" alt="" srcset="" />
+	<app-card-label gameLabel="{{ gameLabel }}"></app-card-label>
 	<app-card-pricing
-		gameType="Digital PS4"
-		gamePrice="R$ 199,99"
+		gameType="{{ gameType }}"
+		gamePrice="{{ gamePrice }}"
 	></app-card-pricing>
 </a>
